# jungle-mini-db

./: .gitignore  CMakeLists.txt  README.md  db_index.c  executor.c  main.c  mini_db.h  parser.c
.codex/: hooks.json
data/: posts.csv  (+1 more)
reum-koo/: CMakeLists.txt  README.md  db_index.c  executor.c  main.c  memory_bptree.c  memory_bptree.h  mini_db.h  parser.c
reum-koo/docs/: reum-000-study-roadmap.md  reum-001-requirements-alignment-diff.md  reum-002-beginner-foundations-for-mini-db.md  reum-003-design-chat-doc-map.md  reum-004-mvp-roadmap-and-project-execution.md  reum-005-design-choice-matrix-for-bptree-project.md  reum-006-locator-row-index-offset-and-storage-layout.md  reum-007-in-memory-flow-and-how-index-is-used.md  reum-008-initial-vs-current-code-flow-compare.html  reum-009-btree-library-benchmark-lab-guide.md  reum-010-btree-library-benchmark-compare.html  reum-011-disk-engine-and-benchmark-beginner-notes.md  reum-012-btree-parameters-for-beginners.md  reum-013-presentation-survival-guide-for-db-and-query-processors.md  reum-014-db-technology-and-product-comparison-map.md
reum-koo/experiments/btree-library-benchmark/: .gitignore  README.md  run_btree_library_benchmarks.py
reum-koo/experiments/btree-library-benchmark/adapters/: adapter_frozenca_btree.cpp  adapter_habedi_bptree.c  adapter_kronuz_cpp_btree.cpp  adapter_reum_memory_bptree.c  adapter_tidwall_btree_c.c  library_registry.cpp
reum-koo/experiments/btree-library-benchmark/common/: benchmark_adapter.h  benchmark_main.cpp
reum-koo/tests/: test_memory_bptree.c  test_mini_db_requirements.py
(+36 files in other folders)
